tests/ui/higher-rank-trait-bounds/issue-95230.new.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-95230.rs:9:13
   |
LL |     for<'a> &'a mut Self:;
   |             ^^^^^^^^^^^^ cannot infer type for mutable reference `&'a mut Bar`
   |
note: required by a bound in `Bar`
  --> $DIR/issue-95230.rs:9:13
   |
LL | pub struct Bar
   |            --- required by a bound in this struct
LL | where
LL |     for<'a> &'a mut Self:;
   |             ^^^^^^^^^^^^ required by this bound in `Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
